bat.string1.lessons.bat.string1.Last2.scala.error
last2:5: error: not enough arguments for method slice: (from: Int, until: Int)String.
Unspecified value parameter until.
    if (str slice(i)+str slice(i+1) == T){
            ^